# python202607poo

./: .gitignore  Readme.md  day1.ipynb  day2-pandas.ipynb  day2-temporal.ipynb  day2.ipynb  euclide.py  presentation.excalidraw  quiz_bases.ipynb  requirements.txt
data/: villes_fr.csv
projet_data_notebooks/: coucou.py  day1.ipynb  day2-pandas.ipynb  day2-temporal.ipynb  quiz_bases_corr.ipynb  requirements.txt
projet_data_notebooks/data/: villes100k.csv  villes100k.json  villes_fr.csv
projet_euclide_path/: euclide.py  requirements.txt
projet_euclide_path/tests/: __init__.py  test_euclide.py  test_path.py
projet_movie_base/: app_movie.py  movie.py  pytest.toml  requirements.txt
projet_movie_base/tests/: test_movie.py
projet_movie_docker/: Dockerfile  Readme.md  app_movie.py  main.py  movie.py  requirements.txt
projet_movie_docker/tests/: conftest.py  test_movie.py
projet_movie_exe/: Readme.md  main.py  pyproject.toml
projet_movie_exe/cinema/: movie.py
projet_movie_exe/tests/: test_movie.py
projet_movie_wheel/: .gitignore  Readme.md  app_movie.py  main.py  movie.py  pyproject.toml
projet_movie_wheel/cinema/: movie.py
projet_movie_wheel/tests/: __init__.py  conftest.py  test_movie.py
tests/: conftest.py  test_euclide.py
