[project]
name = "projet-movie-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
addopts = ["-v", "--cov", "--cov-report=term-missing"]
testpaths = [
    "tests",
]
